[package]
name = "libp2p_chat"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "*"
aes = "*"
rand = "*"
sha2 = "0.10.8"
block-modes = "0.8"
block-padding = "0.2"